# SandboxLibxfce4ui

./: Makefile.am  configure.ac.in
glade/: Makefile.am
libxfce4kbd-private/: Makefile.am
libxfce4ui/: Makefile.am  libxfce4ui-1.pc.in  libxfce4ui-2.pc.in  libxfce4ui.h  libxfce4ui.symbols  xfce-dialogs.c  xfce-dialogs.h  xfce-fadeout.c  xfce-fadeout.h  xfce-firejail-utils.c  xfce-firejail-utils.h  xfce-firejail-widget-ui.h  xfce-firejail-widget.c  xfce-firejail-widget.glade  xfce-firejail-widget.h  xfce-security-dialog.c  xfce-security-dialog.h  xfce-spawn.c  xfce-spawn.h  xfce-workspace.c  xfce-workspace.h
po/: POTFILES.in
xfce4-about/: Makefile.am
xfce4-sandboxd/: Makefile.am  main.c
xfce4-secure-workspaced/: Makefile.am  main.c
